@@ -1,9 +1,14 @@
 <configure xmlns="http://namespaces.zope.org/zope"
-           xmlns:cache="http://namespaces.zope.org/cache"
-           i18n_domain="eea">
+  xmlns:cache="http://namespaces.zope.org/cache"
+  i18n_domain="eea">
 
-    <cache:ruleset ruleset="plone.resource"
-                   for="Products.CMFCore.FSDTMLMethod.FSDTMLMethod" />
+  <cache:ruleset ruleset="plone.resource"
+    for="Products.CMFCore.FSDTMLMethod.FSDTMLMethod" />
+
+  <cache:rulesetType
+    name="eea.content.frontPage"
+    title="Front page"
+    description="A public-facing view for front page"
+    />
 
 </configure>
-
